Fixed collapse on menu

--- a/src/Heading.css
+++ b/src/Heading.css
@@ -8,11 +8,19 @@ header {
   color: white;
 }
 
-@media (min-width: 1200px) {
-    main {
-        max-width: 800px;
-    }
-
-   
+h1 {
+  font-size: 2em;
+  text-align: left;
+  padding-left: 14px;
 }
 
+@media (min-width: 1200px) {
+  main {
+    max-width: 800px;
+  }
+
+  h1 {
+    text-align: center;
+    font-size: 3em;
+  }
+}
